--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         "guzzlehttp/guzzle": "^6.1",
         "nesbot/carbon": "^1.21",
         "roumen/feed": "^2.10",
-        "paquettg/php-html-parser": "^1.6"
+        "paquettg/php-html-parser": "^1.6",
+        "symfony/dom-crawler": "^3.0",
+        "symfony/css-selector": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "phpunit/phpunit": "~4.0"
     },
     "autoload": {
         "classmap": [
