--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "paquettg/php-html-parser": "^1.6",
         "symfony/dom-crawler": "^3.0",
         "symfony/css-selector": "^3.0",
-        "vinelab/rss": "^1.0"
+        "vinelab/rss": "^1.0",
+        "austinb/gameq": "3.*@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
