Prettify /twitch/help list

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+SITE_TITLE="DecAPI"
+
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 TWITCH_REDIRECT_URI=
