Add page name to titles

--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,4 @@ SITE_TITLE="DecAPI"
 
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
-TWITCH_REDIRECT_URI=
+TWITCH_REDIRECT_URI=https://example.com/auth/twitch
