Add support for /twitter/latest and latest_url

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ SITE_TITLE="DecAPI"
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 TWITCH_REDIRECT_URI=https://example.com/auth/twitch
+
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
