--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/dom-crawler": "^3.0",
         "symfony/css-selector": "^3.0",
         "vinelab/rss": "^1.0",
-        "austinb/gameq": "3.*@dev"
+        "austinb/gameq": "3.*@dev",
+        "thujohn/twitter": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
