--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "austinb/gameq": "3.*@dev",
         "thujohn/twitter": "^2.2",
         "alaouy/youtube": "^1.2",
-        "syntax/steam-api": "^2.0"
+        "syntax/steam-api": "^2.0",
+        "socialiteproviders/twitch": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
