--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
@@ -26,7 +26,7 @@ SITE_TITLE="DecAPI"
 
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
-TWITCH_REDIRECT_URI=https://example.com/auth/twitch
+TWITCH_REDIRECT_URI=https://example.com/auth/twitch/callback
 
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
