Fix CSS and JS URLs in docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@
 title: DecAPI
 email: alex@thomassen.xyz
 description: The documentation for DecAPI
-baseurl: "/DecAPI" # the subpath of your site, e.g. /blog
+baseurl: "/DecAPI"
 url: "https://decicus.github.io"
 
 # Build settings
