Update templates Update doc pages and add askfm, br, bttv & dayz

--- a/docs/_data/endpoints/example.yaml
+++ b/docs/_data/endpoints/example.yaml
@@ -6,6 +6,7 @@ endpoints:
           description: "The channel name"
         - name: "{USER}"
           description: "The name of the user"
+          optional: true
       qs:
         - name: "key={API_KEY}"
           description: "Your custom API key"
