Add pages for lever, misc, random Tweak layouts

--- a/docs/_data/endpoints/askfm.yaml
+++ b/docs/_data/endpoints/askfm.yaml
@@ -6,4 +6,4 @@ endpoints:
           description: "The name of the user you wish to retrieve a feed from"
       qs:
       notes:
-        - '<i class="fa fa-1x fa-info"></i> Provides an RSS feed of a specified ASKfm users answers.'
+        - 'Provides an RSS feed of a specified ASKfm users answers.'
