--- a/docs/_data/endpoints/bttv.yaml
+++ b/docs/_data/endpoints/bttv.yaml
@@ -6,4 +6,4 @@ endpoints:
           description: "The channel to retrieve BetterTTV emotes for"
       qs:
       notes:
-        - "<i class='fa fa-1x fa-info'></i> Returns a space-separated list of BetterTTV channel emotes available in the channel."
+        - "Returns a space-separated list of BetterTTV channel emotes available in the channel."
