--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 * text=auto
 *.css linguist-vendored
 *.less linguist-vendored
+
+*.css text eol=lf
+*.html text eol=lf
+*.md text eol=lf
+*.php text eol=lf
