Get session cookie domain from .env file

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 SITE_TITLE="DecAPI"
+# "example.com" and all subdomains
+SESSION_COOKIE_DOMAIN=".example.com"
 
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
