Specify User-Agent in outgoing requests

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,8 @@ MAIL_ENCRYPTION=null
 SITE_TITLE="DecAPI"
 # "example.com" and all subdomains
 SESSION_COOKIE_DOMAIN=".example.com"
+# Used for outgoing calls to third-party APIs
+DECAPI_USER_AGENT="DecAPI/1.0.0 (https://github.com/Decicus/DecAPI)"
 
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
