Add Papertrail support

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ SITE_TITLE="DecAPI"
 SESSION_COOKIE_DOMAIN=".example.com"
 # Used for outgoing calls to third-party APIs
 DECAPI_USER_AGENT="DecAPI/1.0.0 (https://github.com/Decicus/DecAPI)"
+# If you wish to use Papertrail, e.g. "logsN.papertrailapp.com:XXXXX"
+PAPERTRAIL_LOG_DESTINATION=""
 
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
