--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
         "guzzlehttp/guzzle": "^6.1",
         "nesbot/carbon": "^1.21",
         "roumen/feed": "^2.10",
         "paquettg/php-html-parser": "^1.6",
-        "symfony/dom-crawler": "^3.0",
-        "symfony/css-selector": "^3.0",
+        "symfony/dom-crawler": "3.1.*",
+        "symfony/css-selector": "3.1.*",
         "vinelab/rss": "^1.0",
         "austinb/gameq": "3.*@dev",
         "thujohn/twitter": "^2.2",
