--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "guzzlehttp/guzzle": "^6.1",
         "nesbot/carbon": "^1.21",
         "roumen/feed": "^2.10",
@@ -17,14 +17,14 @@
         "austinb/gameq": "3.*@dev",
         "thujohn/twitter": "^2.2",
         "alaouy/youtube": "^1.2",
-        "syntax/steam-api": "2.0.10",
-        "socialiteproviders/twitch": "^2.0",
+        "syntax/steam-api": "dev-master",
+        "socialiteproviders/twitch": "^3.0",
         "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~5.7"
     },
     "autoload": {
         "classmap": [
