Fix cronjob for updating Twitch help articles

--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "nesbot/carbon": "^1.21",
         "roumen/feed": "^2.10",
         "paquettg/php-html-parser": "^1.6",
-        "symfony/dom-crawler": "3.1.*",
-        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "~4.0",
+        "symfony/css-selector": "~4.0",
         "vinelab/rss": "^1.0",
         "austinb/gameq": "3.*@dev",
         "thujohn/twitter": "^2.2",
