--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.5.*",
+        "php": ">=7.1.3",
+        "laravel/framework": "5.6.*",
         "guzzlehttp/guzzle": "^6.1",
         "nesbot/carbon": "^1.21",
         "roumen/feed": "^2.10",
@@ -19,12 +19,13 @@
         "alaouy/youtube": "^1.2",
         "syntax/steam-api": "dev-master",
         "socialiteproviders/twitch": "^3.0",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "fideloper/proxy": "~4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
+        "phpunit/phpunit": "~7.0",
         "filp/whoops": "~2.0"
     },
     "autoload": {
@@ -48,15 +49,12 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
+            "php artisan clear-compiled"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
         ],
-        "post-update-cmd": [
-            "php artisan optimize"
-        ],
+        "post-update-cmd": [],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
