[#28] Fix Fixer currency API, add Fixer API key to .env, update currency list

--- a/.env.example
+++ b/.env.example
@@ -31,13 +31,31 @@ DECAPI_USER_AGENT="DecAPI/1.0.0 (https://github.com/Decicus/DecAPI)"
 # If you wish to use Papertrail, e.g. "logsN.papertrailapp.com:XXXXX"
 PAPERTRAIL_LOG_DESTINATION=""
 
+# Twitch API
+# https://glass.twitch.tv/console/apps
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 TWITCH_REDIRECT_URI=https://example.com/auth/twitch/callback
 
+# Twitter API
+# https://apps.twitter.com/
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 
+# YouTube API
+# https://developers.google.com/youtube/v3/getting-started#before-you-start
+# https://developers.google.com/youtube/registering_an_application#Create_API_Keys
 YOUTUBE_API_KEY=
 
+# Steam API
+# https://steamcommunity.com/dev
 STEAM_API_KEY=
+
+# Currency API
+# Due to an API change, the Fixer API requests are always HTTPS,
+# since most of the currencies used (at least in DecAPI's case) need the legacy/paid plans.
+# You can read more about the API change here (as well as access to legacy plan):
+# https://github.com/fixerAPI/fixer#fixer----important-announcement
+# ----------------------------------------------------------------
+# https://fixer.io/
+FIXER_API_KEY=
