Fix /twitch/following, add /twitch/videos

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,7 @@ STEAM_API_KEY=
 # ----------------------------------------------------------------
 # https://fixer.io/
 FIXER_API_KEY=
+
+# Sentry
+# https://sentry.io/
+SENTRY_LARAVEL_DSN=
