--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "socialiteproviders/twitch": "^3.0",
         "doctrine/dbal": "^2.5",
         "fideloper/proxy": "~4.0",
-        "tom-lingham/searchy": "^2.0"
+        "tom-lingham/searchy": "^2.0",
+        "sentry/sentry-laravel": "^0.9.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
