Update README and add .env field for modifying rate limit on /twitch routes

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,8 @@ SESSION_COOKIE_DOMAIN=".example.com"
 DECAPI_USER_AGENT="DecAPI/1.0.0 (https://github.com/Decicus/DecAPI)"
 # If you wish to use Papertrail, e.g. "logsN.papertrailapp.com:XXXXX"
 PAPERTRAIL_LOG_DESTINATION=""
+# Rate limit. By default it's "100,1", which means 100 requests per 1 minute.
+THROTTLE_RATE_LIMIT="100,1"
 
 # Twitch API
 # https://glass.twitch.tv/console/apps
