Add composer dependency for Redis client

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "fideloper/proxy": "~4.0",
         "tom-lingham/searchy": "^2.0",
         "sentry/sentry-laravel": "^0.9.0",
-        "ramsey/uuid": "^3.7"
+        "ramsey/uuid": "^3.7",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
