--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.8.*",
         "guzzlehttp/guzzle": "^6.1",
-        "nesbot/carbon": "^1.30",
         "roumen/feed": "^2.10",
         "paquettg/php-html-parser": "^1.6",
         "symfony/dom-crawler": "~4.0",
@@ -22,10 +21,11 @@
         "doctrine/dbal": "^2.5",
         "fideloper/proxy": "~4.0",
         "tom-lingham/searchy": "^2.0",
-        "sentry/sentry-laravel": "^0.9.0",
+        "sentry/sentry-laravel": "^1.0",
         "ramsey/uuid": "^3.7",
         "predis/predis": "^1.1",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravel/helpers": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
