Add more .env options for Datadog config

--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,5 @@ DATADOG_ENABLED=false
 DATADOG_METRICS_PREFIX=decapi
 DATADOG_API_KEY=
 DATADOG_APP_KEY=
+DATADOG_STATSD_SERVER=localhost
+DATADOG_STATSD_PORT=8125
