Update from Laravel 5.8 to Laravel 6.0

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+# For production environments: Recommended to set this to `production`
 APP_ENV=local
+# For production environments: Recommended to set this to `false`
 APP_DEBUG=true
+# Generate a proper one using `php artisan key:generate`
 APP_KEY=SomeRandomString
 APP_NAME=DecAPI
 
@@ -16,13 +19,31 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# This project does not use email, AWS or anything like that as of right now.
+# These example configuration options are only included in case that changes in the future.
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME="${APP_NAME}"
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#### Configure these options to match your setup.
 SITE_TITLE="DecAPI"
 # "example.com" and all subdomains
 SESSION_COOKIE_DOMAIN=".example.com"
