--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,9 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.3",
-        "laravel/framework": "5.8.*",
+        "php": ">=7.2.0",
+        "laravel/framework": "^6.0",
         "guzzlehttp/guzzle": "^6.1",
-        "roumen/feed": "^2.10",
         "paquettg/php-html-parser": "^1.6",
         "symfony/dom-crawler": "~4.0",
         "symfony/css-selector": "~4.0",
@@ -23,9 +22,9 @@
         "ramsey/uuid": "^3.7",
         "predis/predis": "^1.1",
         "laravel/tinker": "^1.0",
-        "laravel/helpers": "^1.0",
+        "laravel/helpers": "^1.2",
         "chaseconey/laravel-datadog-helper": "^1.1",
-        "laravelium/feed": "3.1.*"
+        "laravelium/feed": "6.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
