[Configuration] Add key to `.env` for `CACHE_PREFIX`
For servers where there are two separate environments, to prevent clashing between cache keys

--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,10 @@ THROTTLE_RATE_LIMIT="100,1"
 # This is a separate rate limit and the rate limits aren't shared between /twitch and /steam.
 STEAM_THROTTLE_RATE_LIMIT="15,1"
 
+# Generally safe to leave default, unless you have separate DecAPI environments on the same setup.
+# In which case you should rename the `CACHE_PREFIX` for at least one of them.
+CACHE_PREFIX=decapi
+
 # Twitch API
 # https://glass.twitch.tv/console/apps
 TWITCH_CLIENT_ID=
