[Docker] Add Dockerfile (image) and Docker Compose example file

--- a/.env.example
+++ b/.env.example
@@ -6,21 +6,29 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_NAME=DecAPI
 
+# Docker: `DB_HOST` should be just `db`
+# > DB_HOST=db
 DB_HOST=127.0.0.1
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+# Docker: Set `CACHE_DRIVER` and `SESSION_DRIVER` to `redis`
+# > CACHE_DRIVER=redis
+# > SESSION_DRIVER=redis
 CACHE_DRIVER=file
 SESSION_DRIVER=database
 QUEUE_DRIVER=sync
 
+# Docker: `REDIS_HOST` should be just `redis`
+# REDIS_HOST=redis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# This project does not use email, AWS or anything like that as of right now.
+# This project does not use email, AWS or Pusher as of right now.
 # These example configuration options are only included in case that changes in the future.
+# But for now you can leave them as-is.
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
@@ -48,7 +56,7 @@ SITE_TITLE="DecAPI"
 # "example.com" and all subdomains
 SESSION_COOKIE_DOMAIN=".example.com"
 # Used for outgoing calls to third-party APIs
-DECAPI_USER_AGENT="DecAPI/1.0.0 (https://github.com/Decicus/DecAPI)"
+DECAPI_USER_AGENT="DecAPI/2.0.0 (https://github.com/Decicus/DecAPI)"
 # If you wish to use Papertrail, e.g. "logsN.papertrailapp.com:XXXXX"
 PAPERTRAIL_LOG_DESTINATION=""
 # Rate limit. By default it's "100,1", which means 100 requests per 1 minute.
@@ -64,13 +72,13 @@ STEAM_THROTTLE_RATE_LIMIT="15,1"
 CACHE_PREFIX=decapi
 
 # Twitch API
-# https://glass.twitch.tv/console/apps
+# https://dev.twitch.tv/console/apps
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 TWITCH_REDIRECT_URI=https://example.com/auth/twitch/callback
 
 # Twitter API
-# https://apps.twitter.com/
+# https://developer.twitter.com/en
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 
