--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 # http://editorconfig.org
 root = true
 
-[*.{php,css,html,md}]
+[*.{php,css,html,md,yml}]
 end_of_line = lf
 indent_style = space
 indent_size = 4
