--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.2.0",
-        "laravel/framework": "^6.0",
-        "guzzlehttp/guzzle": "^6.1",
+        "laravel/framework": "^7.0",
+        "guzzlehttp/guzzle": "^7.1",
         "paquettg/php-html-parser": "^1.6",
         "symfony/dom-crawler": "~4.0",
         "symfony/css-selector": "~4.0",
@@ -21,15 +21,17 @@
         "sentry/sentry-laravel": "^1.0",
         "ramsey/uuid": "^3.7",
         "predis/predis": "^1.1",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^2.0",
         "laravel/helpers": "^1.2",
         "chaseconey/laravel-datadog-helper": "^1.1",
-        "laravelium/feed": "6.0.*"
+        "laravelium/feed": "7.*",
+        "nunomaduro/collision": "^4.1",
+        "facade/ignition": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~7.0",
+        "phpunit/phpunit": "^8.5",
         "filp/whoops": "~2.0"
     },
     "autoload": {
