--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "^9.0",
-        "filp/whoops": "~2.0"
+        "filp/whoops": "~2.0",
+        "spatie/laravel-ray": "^1.12"
     },
     "autoload": {
         "classmap": [
