[TwitchEmotes] Remove unused API handling for twitchemotes.com

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 # Generate a proper one using `php artisan key:generate`
 APP_KEY=SomeRandomString
 APP_NAME=DecAPI
+APP_URL=http://localhost
 
 # Docker: `DB_HOST` should be just `db`
 # > DB_HOST=db
