[Twitch] Subscriber Emotes - Fix wrong output format for 'tiers' param

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -22,6 +22,8 @@ services:
         restart: unless-stopped
         networks:
             - decapi
+        volumes:
+            - ./volumes/db:/var/lib/mysql
         environment:
             # Values are loaded from `.env`
             MYSQL_DATABASE: ${DB_DATABASE}
