[IP Blacklist] Include reason in response, add env var for contact URL

--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,10 @@ THROTTLE_RATE_LIMIT="100,1"
 # `STEAM_THROTTLE_RATE_LIMIT` applies a different rate limit to /steam routes
 # This is a separate rate limit and the rate limits aren't shared between /twitch and /steam.
 STEAM_THROTTLE_RATE_LIMIT="15,1"
+# Currently only being used in responses for blacklisted IPs alongside the blacklist reason.
+# Typically blacklisted IPs are blacklisted because of excessive requests
+# even when receiving "429 Too Many Requests" repeatedly. Hence why a contact URL might be necessary.
+CONTACT_URL=""
 
 # Generally safe to leave default, unless you have separate DecAPI environments on the same setup.
 # In which case you should rename the `CACHE_PREFIX` for at least one of them.
