--- a/.docker/nginx/decapi.conf
+++ b/.docker/nginx/decapi.conf
@@ -5,6 +5,12 @@ server {
     access_log /var/log/nginx/access.log;
     root /var/www/html/public;
 
+    # Private IP address ranges
+    set_real_ip_from 172.16.0.0/12;
+    set_real_ip_from 192.168.0.0/16;
+    set_real_ip_from 10.0.0.0/8;
+    real_ip_header X-Real-IP;
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
