--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,9 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
