[Maintenance] Upgrade to Laravel 9, remove some unnecessary dependencies, cleanup unnecessary code

--- a/.env.example
+++ b/.env.example
@@ -82,10 +82,8 @@ TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 TWITCH_REDIRECT_URI=https://example.com/auth/twitch/callback
 
-# Twitter API
-# https://developer.twitter.com/en
-TWITTER_CONSUMER_KEY=
-TWITTER_CONSUMER_SECRET=
+# Twitter Scrape API
+TWITTER_SCRAPE_API="https://example.com/twitter-scraper"
 
 # YouTube API
 # https://developers.google.com/youtube/v3/getting-started#before-you-start
