--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,15 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.3.0",
-        "laravel/framework": "^8.0",
+        "php": ">=8.0.2",
+        "laravel/framework": "^9.0",
         "guzzlehttp/guzzle": "^7.1",
         "paquettg/php-html-parser": "^1.6",
         "symfony/dom-crawler": "~4.0",
         "symfony/css-selector": "~4.0",
         "austinb/gameq": "3.*@dev",
-        "thujohn/twitter": "^2.2",
         "alaouy/youtube": "^1.2",
-        "syntax/steam-api": "dev-master",
+        "syntax/steam-api": "dev-laravel9",
         "doctrine/dbal": "^2.5",
         "fideloper/proxy": "~4.0",
         "sentry/sentry-laravel": "^2.13",
@@ -23,9 +22,8 @@
         "laravel/tinker": "^2.0",
         "laravel/helpers": "^1.2",
         "chaseconey/laravel-datadog-helper": "^1.1",
-        "laravelium/feed": "8.*",
-        "nunomaduro/collision": "^5.0",
-        "facade/ignition": "^2.3.6",
+        "nunomaduro/collision": "^6.1",
+        "spatie/laravel-ignition": "^1.0",
         "laravel/legacy-factories": "^1.0",
         "laravel/ui": "^3.0"
     },
