Upgrade Dockerfile to PHP 8.4, upgrade Laravel framework from 9.x to 10.x

--- a/composer.json
+++ b/composer.json
@@ -4,32 +4,32 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "minimum-stability": "stable",
     "require": {
-        "php": ">=8.0.2",
-        "laravel/framework": "^9.0",
+        "php": ">=8.1.0",
+        "laravel/framework": "^10.0",
         "guzzlehttp/guzzle": "^7.1",
         "paquettg/php-html-parser": "^1.6",
         "symfony/dom-crawler": "~4.0",
         "symfony/css-selector": "~4.0",
         "austinb/gameq": "3.*@dev",
         "alaouy/youtube": "^1.2",
-        "syntax/steam-api": "dev-laravel9",
-        "doctrine/dbal": "^2.5",
-        "fideloper/proxy": "~4.0",
-        "sentry/sentry-laravel": "^2.13",
+        "syntax/steam-api": "^3.0.0",
+        "doctrine/dbal": "^3.0",
+        "sentry/sentry-laravel": "^3.2.0",
         "ramsey/uuid": "^4.0",
         "predis/predis": "^1.1",
         "laravel/tinker": "^2.0",
         "laravel/helpers": "^1.2",
         "chaseconey/laravel-datadog-helper": "^1.1",
-        "nunomaduro/collision": "^6.1",
-        "spatie/laravel-ignition": "^1.0",
+        "nunomaduro/collision": "^7.0",
+        "spatie/laravel-ignition": "^2.0",
         "laravel/legacy-factories": "^1.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^4.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^10.0",
         "filp/whoops": "~2.0",
         "spatie/laravel-ray": "^1.12"
     },
